--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,6 +39,7 @@
         </intent-filter>
         </activity>
         <activity android:name=".controllers.RegisterActivity"></activity>
+        <activity android:name=".controllers.LoginActivity"></activity>
 
 
         <meta-data
